--- a/2020_21/FPM/H2/homework.tex
+++ b/2020_21/FPM/H2/homework.tex
@@ -51,7 +51,7 @@
    \end{align}
    This shows that any $x<1$ is not an upper bound of $A$.
    From (\ref{ub}) we know that $1$ is an upper bound and (\ref{sup}) shows
-   that any $x<1$ is not a lower bound. Therefore we conclude that
+   that any $x<1$ is not. Therefore we conclude that
    $1$ is the least upper bound of $A$, i.e.
    \begin{align*}
       \sup A = \sup\left\{\frac{n}{n+1}:n\in\N\right\} = 1.
